# Death_Pwn

./: .example.env  .gitignore  Cargo.toml  Death_Pwn.py  GOAL.md  LICENSE  README.md  TODO.md  basics.py  compileit  install.sh  mdk4.py  preference.json
deathpwn-core/: Cargo.toml
deathpwn-core/src/: cancel.rs  clock.rs  config.rs  engine.rs  error.rs  lib.rs
deathpwn-core/src/cache/: mod.rs
deathpwn-core/src/detector/: mod.rs
deathpwn-core/src/exec/: feedback.rs  installer.rs  mod.rs  runner.rs
deathpwn-core/src/goal/: mod.rs
deathpwn-core/src/pipeline/: mod.rs  plan.rs  render.rs  retrieve.rs  understand.rs
deathpwn-core/src/providers/: ai.rs  failover.rs  mod.rs  openai.rs
deathpwn-core/src/schema/: mod.rs
deathpwn-core/src/search/: ddg.rs  mod.rs
deathpwn-core/src/session/: artifacts.rs  mod.rs
deathpwn-tui/: Cargo.toml
deathpwn-tui/src/: app.rs  main.rs  ui.rs
deathpwn-tui/src/ui/: filebrowser.rs  highlight.rs  mod.rs  panes.rs  popup.rs  theme.rs
docs/: AGENTS.md  TODO.md  architecture.md  configuration.md  pipeline.md  tui.md
docs/superpowers/plans/: 2026-07-16-deathpwn-v1.md
docs/superpowers/plans/planparts/: FAKE-CONTRACT.md  HEADER.md  MANIFEST.md  README.md  TASK16-DELEGATE.md  task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-07.md  task-08.md  task-09.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-15.md  task-16.md
docs/superpowers/specs/: 2026-07-16-deathpwn-v1-design.md
