[package]
name = "deathpwn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.20"
tracing = "0.1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "time", "macros"] }
nix = { version = "0.29", features = ["signal", "process"] }

[features]
test-support = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
